--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-.eunit
-deps
-*.o
-*.beam
-*.plt
-erl_crash.dump
-ebin
-rel/example_project
-.concrete/DEV_MODE
-.rebar
+**/.eunit
+**/.rebar
+**/deps
+**/*.o
+**/*.beam
+**/*.plt
+**/erl_crash.dump
+**/ebin
+**/rel/example_project
+**/.concrete/DEV_MODE
+**/TEST-*.xml
+
